# tools

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
app/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
app/src/: components.rs  main.rs
src/: components.rs  hyper_header.rs  main.rs  tailwind.css
src/components/: chapters.rs  hyper_header.rs  index.rs  plot_op3.rs  podcast_guid.rs  utils.rs  validator.rs
