[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.2.1", features = ["v5", "fast-rng", "macro-diagnostics"] }
url = "2.3.1"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
chrono = "0.4.22"
serde_json = "1.0.87"
reqwest-wasm = { version = "0.11.15", features = ["json", "blocking"] }
isocountry = "0.3.2"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
itertools = "0.10.5"
rand = "0.8.5"
futures = "0.3.25"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
