[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["RSS Blue", "Dovydas Joksas"]
license = "MIT OR Apache-2.0"


[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
getrandom = { version = "0.2.11", features = ["js"] }
uuid = { version = "1.6.1", features = ["v5", "fast-rng", "macro-diagnostics"] }
url = "2.5.0"
web-sys = { version = "0.3.66", features = [
  "Url",
  "UrlSearchParams",
  "HtmlDialogElement",
  "Storage",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }
wasm-bindgen = "0.2.89"
chrono = "0.4.31"
serde_json = "1.0.87"
reqwest-wasm = { version = "0.11.15", features = ["json", "blocking"] }
isocountry = "0.3.2"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.17"
itertools = "0.12.0"
rand = "0.8.5"
futures = "0.3.25"
badpod = "0.7.4"
wasm-bindgen-futures = "0.4.39"
comrak = "0.20.0"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
